--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
         <div class="container">
           <div class="about_v2__container">
             <div class="about_v2_img">
-              <img src="./assets/image/mission-img1.jpg" alt="judge" />
+              <img src="./assets/image/mission-img3.jpg" alt="judge" />
             </div>
             <div class="about_v2_content">
               <div class="about_v2__title title">
@@ -82,32 +82,17 @@
               </div>
               <div class="about_v2_text">
                 <p>
-                  CompeteX Sport Events: Revolutionizing Sports Experiences for
-                  All At CompeteX Sport Events, our mission is to transform the
-                  sports event industry by delivering exceptional and memorable
-                  experiences for everyone—from professional athletes to
-                  corporate teams and children's parties. Founded by a group of
-                  sports enthusiasts who saw the need for better-managed sports
-                  events, we are dedicated to offering top-tier, customized
-                  events that cater to diverse audiences. Our journey began with
-                  local, small-scale events and quickly expanded due to our
-                  reputation for excellence.
-                </p>
+					CompeteX Sport Events: Revolutionizing Sports Experiences for All
+At CompeteX Sport Events, our mission is to transform the sports event industry by delivering exceptional and memorable experiences for everyone—from professional athletes to corporate teams and children's parties. Founded by a group of sports enthusiasts who saw the need for better-managed sports events, we are dedicated to offering top-tier, customized events that cater to diverse audiences. Our journey began with local, small-scale events and quickly expanded due to our reputation for excellence. 
+				</p>
                 <p>
-                  Today, we provide a wide range of services including rigorous
-                  competitions for athletes, innovative team-building programs
-                  for corporate clients, and fun-filled sports-themed parties
-                  for children. Each event is designed to enhance participation,
-                  foster engagement, and create lasting memories, ensuring that
-                  every participant and spectator enjoys a truly outstanding
-                  experience.
+					Today, we provide a wide range of services including rigorous competitions for athletes, innovative team-building programs for corporate clients, and fun-filled sports-themed parties for children. Each event is designed to enhance participation, foster engagement, and create lasting memories, ensuring that every participant and spectator enjoys a truly outstanding experience.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </section>
-
       <section class="mission mb-m">
         <div class="container">
           <div class="mission__container">
@@ -177,7 +162,164 @@
           </div>
         </div>
       </section>
-    </main>
+	  <section class="achievements mb-m">
+		<div class="container">
+			<div class="achievements__container">
+				<div class="achievements__title title">
+					<div>achievements</div>
+					<h2>our achievements in <span>organizing events</span></h2>
+				</div>
+				<div class="achievements__items">
+					<div class="achievements__item">
+						<div class="achievements__count">
+							<div>01</div>
+						<h3>4 Years in Business</h3>
+						</div>
+						<p>
+							CompeteX Sport Events has been a trusted name in the sports event industry for over eight years, consistently delivering top-tier events and exceptional experiences for all participants.
+						</p>
+					</div>
+					<div class="achievements__item">
+						<div class="achievements__count">
+							<div>02</div>
+							<h3>200 Events Organized</h3>
+						</div>
+						<p>We have successfully organized 204 diverse and memorable sports events, ranging from professional competitions to corporate team-building activities and children's parties.</p>
+					</div>
+					<div class="achievements__item">
+						<div class="achievements__count">
+							<div>03</div>
+							<h3>Expanded Clientele Base</h3>
+						</div>
+						<p>Starting from a small, local company, we have expanded our reach to serve a wide range of clients, including professional athletes, corporate organizations, and families, establishing a strong reputation for excellence.</p>
+					</div>
+					<div class="achievements__item">
+						<div class="achievements__count">
+							<div>04</div>
+							<h3>Innovative Corporate Programs</h3>
+						</div>
+						<p>
+							Our specialized corporate programs have been highly praised for their effectiveness in enhancing team building, leadership, and employee engagement, contributing to improved productivity and morale in numerous companies.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	  </section>   
+	  <section class="vision mb-m">
+		<div class="container">
+			<div class="vision__container">
+				<div class="vision__title title">
+					<div>vision</div>
+					<h2>Founding <span>Vision</span></h2>
+				</div>
+				<div class="vision__wrap">
+						<div class="vision__row"> 
+					<div class="vision__item">
+							<img src="./assets/image/mission-img3.jpg" alt="judges">
+							<div class="vision__item_content">
+								<div class="green vision_count">
+									step #1
+								</div>
+								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events thatnot only focus on competition but also on the overall experience of participants and spectators.</p>
+							</div>
+						</div>
+						<div class="vision__arrow">
+							<img src="./assets/image/rotate-arrow.svg" alt="rotate arrow">
+						</div>
+					</div>
+					<div class="vision__row"> 
+						<div class="vision__item">
+							<img src="./assets/image/vision-img1.jpg" alt="judges">
+							<div class="vision__item_content">
+								<div class="green vision_count">
+									step #1
+								</div>
+								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events thatnot only focus on competition but also on the overall experience of participants and spectators.</p>
+							</div>
+						</div>
+						<div class="vision__arrow">
+							<img src="./assets/image/rotate-arrow.svg" alt="rotate arrow">
+						</div>
+					</div>
+					<div class="vision__row"> 
+						<div class="vision__item">
+							<img src="./assets/image/vision-img2.jpg" alt="judges">
+							<div class="vision__item_content">
+								<div class="green vision_count">
+									step #1
+								</div>
+								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events thatnot only focus on competition but also on the overall experience of participants and spectators.</p>
+							</div>
+						</div>
+						<div class="vision__arrow">
+							<img src="./assets/image/rotate-arrow.svg" alt="rotate arrow">
+						</div>
+					</div>
+					<div class="vision__row"> 
+						<div class="vision__item">
+							<img src="./assets/image/vision-img3.jpg" alt="judges">
+							<div class="vision__item_content">
+								<div class="green vision_count">
+									step #1
+								</div>
+								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events thatnot only focus on competition but also on the overall experience of participants and spectators.</p>
+							</div>
+						</div>
+						<div class="vision__arrow">
+							<img src="./assets/image/rotate-arrow.svg" alt="rotate arrow">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	  </section>
+	  <section class="who mb-m">
+		<div class="container">
+			<div class="who__container">
+				<div class="who__content title scrolling__title">
+				  <div>our clients</div>
+				  <h2>For <span>whom?</span></h2>
+				</div>
+				<div class="who__scrolling scrolling">
+				  <div class="who__scrolling_item scrolling_item">
+					<div class="who__scrolling_item-count scrolling_item-count">01</div>
+					<div class="who__scrolling_item-content scrolling_item-content">
+					  <h3>Children's Parties</h3>
+					  <p>We create fun, safe sports-themed parties for kids, promoting physical activity and leaving lasting memories. </p>
+					</div>
+				  </div>
+				  <div class="who__scrolling_item scrolling_item">
+					<div class="who__scrolling_item-count scrolling_item-count">02</div>
+					<div class=" who__scrolling_item-content scrolling_item-content">
+					  <h3>Corporate Clients</h3>
+					  <p>Our tailored sports events enhance team building, leadership, and employee engagement, improving productivity and morale.</p>
+					</div>
+				  </div>
+				  <div class="who__scrolling_item scrolling_item">
+					<div class=" who__scrolling_item-count scrolling_item-count">03</div>
+					<div class="who__scrolling_item-content scrolling_item-content">
+					  <h3>Professional Athletes </h3>
+					  <p>We organize accessible events for all athletes, providing rigorous competition and top-notch facilities to help them reach their full potential.</p>
+					</div>
+				  </div>
+				  <div class="who__scrolling_item scrolling_item">
+					<div class="who__scrolling_item-count scrolling_item-count">04</div>
+					<div class="who__scrolling_item-content scrolling_item-content">
+					  <h3>Professional and Inclusive</h3>
+					  <p>
+						We pride ourselves on delivering professional and inclusive
+						sports events, creating opportunities for everyone to
+						participate and enjoy, regardless of their age or skill
+						level.
+					  </p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+		</div>
+	  </section>
+	 </main>
     <footer class="footer">
       <div class="container">
         <div class="footer__container">
