--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <section class="advantages mb-m">
         <div class="container">
           <div class="advantages__container">
-            <div class="advantages__content title">
+            <div class="advantages__content title scrolling__title">
               <div>why us?</div>
               <h2>4 key benefits competex <span>sport events</span></h2>
             </div>
-            <div class="advantages__scrolling">
-              <div class="advantages__scrolling_item">
-                <div class="scrolling_item-count">01</div>
-                <div class="scrolling_item-content">
+            <div class="advantages__scrolling scrolling">
+              <div class="advantages__scrolling_item scrolling_item">
+                <div class="advantages__scrolling_item-count scrolling_item-count">01</div>
+                <div class="advantages__scrolling_item-content scrolling_item-content">
                   <h3>Passion for Sports</h3>
                   <p>
                     Our company was founded by sports enthusiasts who are
@@ -93,9 +93,9 @@
                   </p>
                 </div>
               </div>
-              <div class="advantages__scrolling_item">
-                <div class="scrolling_item-count">02</div>
-                <div class="scrolling_item-content">
+              <div class="advantages__scrolling_item scrolling_item">
+                <div class="advantages__scrolling_item-count scrolling_item-count">02</div>
+                <div class=" advantages__scrolling_item-content scrolling_item-content">
                   <h3>Customized Events</h3>
                   <p>
                     We offer customized sports events for professional athletes,
@@ -104,9 +104,9 @@
                   </p>
                 </div>
               </div>
-              <div class="advantages__scrolling_item">
-                <div class="scrolling_item-count">03</div>
-                <div class="scrolling_item-content">
+              <div class="advantages__scrolling_item scrolling_item">
+                <div class=" advantages__scrolling_item-count scrolling_item-count">03</div>
+                <div class="advantages__scrolling_item-content scrolling_item-content">
                   <h3>Reputation for Excellence</h3>
                   <p>
                     Starting from small, locally-focused events, our reputation
@@ -115,9 +115,9 @@
                   </p>
                 </div>
               </div>
-              <div class="advantages__scrolling_item">
-                <div class="scrolling_item-count">04</div>
-                <div class="scrolling_item-content">
+              <div class="advantages__scrolling_item scrolling_item">
+                <div class="advantages__scrolling_item-count scrolling_item-count">04</div>
+                <div class="advantages__scrolling_item-content scrolling_item-content">
                   <h3>Professional and Inclusive</h3>
                   <p>
                     We pride ourselves on delivering professional and inclusive
@@ -201,7 +201,7 @@
             <div class="services__wrap">
               <div class="services__item">
                 <div class="services__item_content">
-                  <div class="service_count">1 service</div>
+                  <div class="service_count green">1 service</div>
                   <h3>Jiu Jitsu Competition Package for Children's Parties</h3>
                   <p>
                     Ready to add excitement and healthy competition to your
@@ -219,7 +219,7 @@
               </div>
               <div class="services__item">
                 <div class="services__item_content">
-                  <div class="service_count">2 service</div>
+                  <div class="service_count green">2 service</div>
                   <h3>Jiu Jitsu Corporate Events</h3>
                   <p>
                     CompeteX Sport Events offers corporate clients unique Jiu
@@ -238,7 +238,7 @@
               </div>
               <div class="services__item">
                 <div class="services__item_content">
-                  <div class="service_count">3 service</div>
+                  <div class="service_count green">3 service</div>
                   <h3>Jiu Jitsu Competition Package</h3>
                   <p>
                     At CompeteX Sport Events, we bring the thrill of Jiu Jitsu
@@ -503,10 +503,7 @@
               </div>
               <div class="faq__accord-item accord-item">
                 <div class="faq__accord-item-top accord-item-top">
-                  <p>
-                    3. Can I return my ticket if I am unable to attend the
-                    event?
-                  </p>
+                  <p>3. Can I return my ticket if I am unable to attend the event?</p>
                   <div class="close">
                     <svg
                       viewBox="0 0 32 32"
@@ -542,10 +539,7 @@
               </div>
               <div class="faq__accord-item accord-item">
                 <div class="faq__accord-item-top accord-item-top">
-                  <p>
-                    4. How can I find out about upcoming sporting events and
-                    promotions?
-                  </p>
+                  <p>4. How can I find out about upcoming sporting events and promotions?</p>
                   <div class="close">
                     <svg
                       viewBox="0 0 32 32"
