--- a/service-page.html
+++ b/service-page.html
@@ -50,87 +50,42 @@
       </div>
     </header>
     <main>
-		<section class="hero_v2 hero mb-m">
+		<section class="hero_v2 hero">
 			<div class="container">
 			<div class="hero__container">
 				<div class="breadcrumbs text-regular-s">
 					  <div class="breadcrumbs__wrap">
 						<a href="./index.html">Home page</a>
 						<span> > </span>
-						<span>Services</span>
+						<span>CompeteX Jiu Jitsu Corporate Events</span>
 					  </div>
 				  </div>
 			  <div class="hero__top">
-					<h1>services</h1>
+					<h1>CompeteX Jiu Jitsu Corporate Events</h1>
 				  <p>
 					Here you can learn more about our services.
 				  </p>
 				</div>
 			  </div>
+			  
 			</div>
 		  </section>
-		  <section class="services mb-m">
+		  <section class="events mb-m">
 			<div class="container">
-				<div class="services__wrap">
-					<div class="services__item">
-					  <div class="services__item_content">
-						<div class="service_count green">1 service</div>
-						<h3>Jiu Jitsu Competition Package for Children's Parties</h3>
-						<p>
-						  Ready to add excitement and healthy competition to your
-						  child's party? CompeteX Sport Events specializes in
-						  thrilling Jiu Jitsu competitions tailored for kids' parties!
-						</p>
-						<a href="./service-page.html" class="btn">read more</a>
-					  </div>
-					  <div class="services__item_img">
-						<img
-						  src="./assets/image/services-img1.jpg"
-						  alt="Jiu Jitsu Competition Package for Children's Parties"
-						/>
-					  </div>
+				<div class="events__container">
+					<div class="events__images">
+						<img src="./assets/image/slide-img3.jpg" alt="CompeteX Jiu Jitsu Corporate Events">
+						<img src="./assets/image/slide-img3.jpg" alt="CompeteX Jiu Jitsu Corporate Events">
 					</div>
-					<div class="services__item">
-					  <div class="services__item_content">
-						<div class="service_count green">2 service</div>
-						<h3>Jiu Jitsu Corporate Events</h3>
-						<p>
-						  CompeteX Sport Events offers corporate clients unique Jiu
-						  Jitsu events that combine competition and team-building.
-						  This boosts morale, strengthens team bonds, and creates
-						  unforgettable experiences.
-						</p>
-						<a href="./service-page.html" class="btn">read more</a>
-					  </div>
-					  <div class="services__item_img">
-						<img
-						  src="./assets/image/services-img2.jpg"
-						  alt="Jiu Jitsu Corporate Events"
-						/>
-					  </div>
+					<div class="events__content">
+						<h2>CompeteX Jiu Jitsu <span>Corporate Events</span></h2>
+						<p>CompeteX Sport Events offers a unique and exhilarating opportunity for corporate clients to engage their teams in the dynamic world of Jiu Jitsu. Our tailored packages combine the excitement of martial arts competition with team-building exercises, fostering camaraderie, resilience, and a winning mindset among participants. Whether you're looking to enhance employee morale, strengthen bonds within your organization, or simply provide a memorable experience, CompeteX Jiu Jitsu Corporate Events are designed to deliver an unforgettable and impactful experience.</p>
+						<a href="./contact.html" class="btn">book events</a>
 					</div>
-					<div class="services__item">
-					  <div class="services__item_content">
-						<div class="service_count green">3 service</div>
-						<h3>Jiu Jitsu Competition Package</h3>
-						<p>
-						  At CompeteX Sport Events, we bring the thrill of Jiu Jitsu
-						  to corporate clients. Our packages combine expert event
-						  management with team-building excitement, ensuring a
-						  successful and memorable experience for all.
-						</p>
-						<a href="./services.html" class="btn">read more</a>
-					  </div>
-					  <div class="services__item_img">
-						<img
-						  src="./assets/image/services-img1.jpg"
-						  alt="Jiu Jitsu Competition Package"
-						/>
-					  </div>
-					</div>
-				  </div>
+				</div>
 			</div>
 		  </section>
+		  
 </main>
 <footer class="footer">
   <div class="container">
