add contact page

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             </div>
             <div class="hero__top">
               <h1>About Us</h1>
-              <p>Here you can learn more about our services.</p>
+              <p>Here you can learn more and get to know our company better.</p>
             </div>
           </div>
         </div>
