--- a/gallery.html
+++ b/gallery.html
@@ -64,7 +64,7 @@
             </div>
             <div class="hero__top">
               <h1>GALLERY</h1>
-              <p>Here you can learn more about our services.</p>
+              <p>Our cool photo reports.</p>
             </div>
           </div>
         </div>
