--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
             </div>
             <div class="hero__top">
               <h1>News</h1>
-              <p>Here you can learn more about our services.</p>
+              <p>Here you can find out the latest news about our events.</p>
             </div>
           </div>
         </div>
