--- a/index.html
+++ b/index.html
@@ -433,27 +433,10 @@
                 <div class="faq__accord-item-top accord-item-top">
                   <p>1. How can I purchase tickets to a sporting event?</p>
                   <div class="close">
-                    <svg
-                      viewBox="0 0 32 32"
-                      version="1.1"
-                      xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink"
-                      fill="#000000"
-                    >
-                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                      <g
-                        id="SVGRepo_tracerCarrier"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></g>
-                      <g id="SVGRepo_iconCarrier">
-                        <g id="icomoon-ignore"></g>
-                        <path
-                          d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
-                          fill="#ffffff"
-                        ></path>
-                      </g>
-                    </svg>
+                    <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<line x1="6.56689" y1="1.09278e-08" x2="6.56689" y2="13" stroke="white"/>
+						<line x1="1.09278e-08" y1="6.43335" x2="13" y2="6.43335" stroke="white"/>
+						</svg>
                   </div>
                 </div>
                 <div class="faq__accord-item-bottom accord-item-bottom">
@@ -469,27 +452,10 @@
                 <div class="faq__accord-item-top accord-item-top">
                   <p>2. What types of sporting events do you cover?</p>
                   <div class="close">
-                    <svg
-                      viewBox="0 0 32 32"
-                      version="1.1"
-                      xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink"
-                      fill="#000000"
-                    >
-                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                      <g
-                        id="SVGRepo_tracerCarrier"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></g>
-                      <g id="SVGRepo_iconCarrier">
-                        <g id="icomoon-ignore"></g>
-                        <path
-                          d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
-                          fill="#ffffff"
-                        ></path>
-                      </g>
-                    </svg>
+                    <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<line x1="6.56689" y1="1.09278e-08" x2="6.56689" y2="13" stroke="white"/>
+						<line x1="1.09278e-08" y1="6.43335" x2="13" y2="6.43335" stroke="white"/>
+						</svg>
                   </div>
                 </div>
                 <div class="faq__accord-item-bottom accord-item-bottom">
@@ -505,27 +471,10 @@
                 <div class="faq__accord-item-top accord-item-top">
                   <p>3. Can I return my ticket if I am unable to attend the event?</p>
                   <div class="close">
-                    <svg
-                      viewBox="0 0 32 32"
-                      version="1.1"
-                      xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink"
-                      fill="#000000"
-                    >
-                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                      <g
-                        id="SVGRepo_tracerCarrier"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></g>
-                      <g id="SVGRepo_iconCarrier">
-                        <g id="icomoon-ignore"></g>
-                        <path
-                          d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
-                          fill="#ffffff"
-                        ></path>
-                      </g>
-                    </svg>
+					<svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<line x1="6.56689" y1="1.09278e-08" x2="6.56689" y2="13" stroke="white"/>
+						<line x1="1.09278e-08" y1="6.43335" x2="13" y2="6.43335" stroke="white"/>
+						</svg>
                   </div>
                 </div>
                 <div class="faq__accord-item-bottom accord-item-bottom">
@@ -541,27 +490,10 @@
                 <div class="faq__accord-item-top accord-item-top">
                   <p>4. How can I find out about upcoming sporting events and promotions?</p>
                   <div class="close">
-                    <svg
-                      viewBox="0 0 32 32"
-                      version="1.1"
-                      xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink"
-                      fill="#000000"
-                    >
-                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                      <g
-                        id="SVGRepo_tracerCarrier"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></g>
-                      <g id="SVGRepo_iconCarrier">
-                        <g id="icomoon-ignore"></g>
-                        <path
-                          d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
-                          fill="#ffffff"
-                        ></path>
-                      </g>
-                    </svg>
+					<svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<line x1="6.56689" y1="1.09278e-08" x2="6.56689" y2="13" stroke="white"/>
+						<line x1="1.09278e-08" y1="6.43335" x2="13" y2="6.43335" stroke="white"/>
+						</svg>
                   </div>
                 </div>
                 <div class="faq__accord-item-bottom accord-item-bottom">
